Traducido archivo whatsnew/3.5

--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -1,33 +1,35 @@
 # Copyright (C) 2001-2020, Python Software Foundation
 # This file is distributed under the same license as the Python package.
-# Maintained by the python-doc-es workteam. 
+# Maintained by the python-doc-es workteam.
 # docs-es@python.org / https://mail.python.org/mailman3/lists/docs-es.python.org/
 # Check https://github.com/python/python-docs-es/blob/3.8/TRANSLATORS to get the list of volunteers
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2020-10-30 00:06-0600\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: \n"
+"Language: es_MX\n"
+"X-Generator: Poedit 2.4.1\n"
 
 #: ../Doc/whatsnew/3.5.rst:3
 msgid "What's New In Python 3.5"
-msgstr ""
+msgstr "Qué hay de nuevo en Python 3.5"
 
 #: ../Doc/whatsnew/3.5.rst:0
 msgid "Editors"
-msgstr ""
+msgstr "Editores"
 
 #: ../Doc/whatsnew/3.5.rst:5
 msgid "Elvis Pranskevichus <elvis@magic.io>, Yury Selivanov <yury@magic.io>"
-msgstr ""
+msgstr "Elvis Pranskevichus <elvis@magic.io>, Yury Selivanov <yury@magic.io>"
 
 #: ../Doc/whatsnew/3.5.rst:47
 msgid ""
@@ -35,70 +37,87 @@ msgid ""
 "Python 3.5 was released on September 13, 2015.  See the `changelog <https://"
 "docs.python.org/3.5/whatsnew/changelog.html>`_ for a full list of changes."
 msgstr ""
+"Este artículo explica las nuevas características de Python 3.5, en "
+"comparación con 3.4. Python 3.5 fue publicada el 13 de septiembre de 2015. "
+"Consultar el `registro de cambios <https://docs.python.org/3.5/whatsnew/"
+"changelog.html>`_ para una lista completa de cambios."
 
 #: ../Doc/whatsnew/3.5.rst:54
 msgid ":pep:`478` - Python 3.5 Release Schedule"
-msgstr ""
+msgstr ":pep:`478` - Python 3.5 Calendario de lanzamiento de Python 3.5"
 
 #: ../Doc/whatsnew/3.5.rst:58
 msgid "Summary -- Release highlights"
-msgstr ""
+msgstr "Resumen -- Aspectos destacados de la versión"
 
 #: ../Doc/whatsnew/3.5.rst:60
 msgid "New syntax features:"
-msgstr ""
+msgstr "Nuevas características de sintaxis:"
 
 #: ../Doc/whatsnew/3.5.rst:62
 msgid ""
 ":ref:`PEP 492 <whatsnew-pep-492>`, coroutines with async and await syntax."
 msgstr ""
+":ref:`PEP 492 <whatsnew-pep-492>`, corrutinas con sintaxis async y await."
 
 #: ../Doc/whatsnew/3.5.rst:63
 msgid ""
 ":ref:`PEP 465 <whatsnew-pep-465>`, a new matrix multiplication operator: ``a "
 "@ b``."
 msgstr ""
+":ref:`PEP 465 <whatsnew-pep-465>`, un nuevo operador de multiplicación de "
+"matrices: ``a @ b``."
 
 #: ../Doc/whatsnew/3.5.rst:64
 msgid ""
 ":ref:`PEP 448 <whatsnew-pep-448>`, additional unpacking generalizations."
 msgstr ""
+":ref:`PEP 448 <whatsnew-pep-448>`, generalizaciones de desembalaje "
+"adicionales."
 
 #: ../Doc/whatsnew/3.5.rst:67
 msgid "New library modules:"
-msgstr ""
+msgstr "Nuevos módulos:"
 
 #: ../Doc/whatsnew/3.5.rst:69
 msgid ":mod:`typing`: :ref:`PEP 484 -- Type Hints <whatsnew-pep-484>`."
-msgstr ""
+msgstr ":mod:`typing`: :ref:`PEP 484 -- Type Hints <whatsnew-pep-484>`."
 
 #: ../Doc/whatsnew/3.5.rst:70
 msgid ""
 ":mod:`zipapp`: :ref:`PEP 441 Improving Python ZIP Application Support "
 "<whatsnew-zipapp>`."
 msgstr ""
+":mod:`zipapp`: :ref:`PEP 441 Mejora de soporte de la aplicación Python ZIP "
+"<whatsnew-zipapp>`."
 
 #: ../Doc/whatsnew/3.5.rst:74
 msgid "New built-in features:"
-msgstr ""
+msgstr "Nuevas características integradas:"
 
 #: ../Doc/whatsnew/3.5.rst:76
 msgid ""
 "``bytes % args``, ``bytearray % args``: :ref:`PEP 461 <whatsnew-pep-461>` -- "
 "Adding ``%`` formatting to bytes and bytearray."
 msgstr ""
+"``bytes % args``, ``bytearray % args``: :ref:`PEP 461 <whatsnew-pep-461>` -- "
+"Agrega formato ``%`` a bytes y bytearray."
 
 #: ../Doc/whatsnew/3.5.rst:79
 msgid ""
 "New :meth:`bytes.hex`, :meth:`bytearray.hex` and :meth:`memoryview.hex` "
 "methods. (Contributed by Arnon Yaari in :issue:`9951`.)"
 msgstr ""
+"Nuevos métodos :meth:`bytes.hex`, :meth:`bytearray.hex` y :meth:`memoryview."
+"hex`. (Contribución de Arnon Yaari en :issue:`9951`.)"
 
 #: ../Doc/whatsnew/3.5.rst:82
 msgid ""
 ":class:`memoryview` now supports tuple indexing (including multi-"
 "dimensional). (Contributed by Antoine Pitrou in :issue:`23632`.)"
 msgstr ""
+":class:`memoryview` ahora admite la indexación de tuplas (incluida la "
+"multidimensional). (Contribución de Antoine Pitrou en :issue:`23632`.)"
 
 #: ../Doc/whatsnew/3.5.rst:85
 msgid ""
@@ -106,16 +125,22 @@ msgid ""
 "being iterated by ``yield from`` expressions. (Contributed by Benno Leslie "
 "and Yury Selivanov in :issue:`24450`.)"
 msgstr ""
+"Los generadores tienen un nuevo atributo ``gi_yieldfrom``, el cual devuelve "
+"el objeto que está siendo iterado por expresiones ``yield from``. "
+"(Contribución de Benno Leslie y Yury Selivanov en :issue:`24450`.)"
 
 #: ../Doc/whatsnew/3.5.rst:89
 msgid ""
 "A new :exc:`RecursionError` exception is now raised when maximum recursion "
 "depth is reached.  (Contributed by Georg Brandl in :issue:`19235`.)"
 msgstr ""
+"Ahora se genera una nueva excepción :exc:`RecursionError` cuando se alcanza "
+"la profundidad máxima de recursividad. (Contribución de Georg Brandl en :"
+"issue:`19235`.)"
 
 #: ../Doc/whatsnew/3.5.rst:94
 msgid "CPython implementation improvements:"
-msgstr ""
+msgstr "Mejoras en la implementación de CPython:"
 
 #: ../Doc/whatsnew/3.5.rst:96
 msgid ""
@@ -124,6 +149,11 @@ msgid ""
 "handler, instead of the ``strict`` error handler. (Contributed by Victor "
 "Stinner in :issue:`19977`.)"
 msgstr ""
+"Cuando la configuración regional ``LC_TYPE`` es la configuración regional "
+"POSIX (configuración regional ``C``), ahora :py:data:`sys.stdin` y :py:data:"
+"`sys.stdout` usan el controlador de errores ``surrogateescape``, en lugar "
+"del controlador de errores ``strict``. (Contribución de Victor Stinner en :"
+"issue:`19977`.)"
 
 #: ../Doc/whatsnew/3.5.rst:101
 msgid ""
@@ -131,6 +161,10 @@ msgid ""
 "scheme that includes the optimization level explicitly in ``.pyc`` name. "
 "(See :ref:`PEP 488 overview <whatsnew-pep-488>`.)"
 msgstr ""
+"Los archivos ``.pyo`` ya no se utilizan y han sido reemplazados por un "
+"esquema más flexible que incluye el nivel de optimización explícitamente en "
+"el nombre ``.pyc``. (Consultar la :ref:`PEP 488 descripción general "
+"<whatsnew-pep-488>`.)"
 
 #: ../Doc/whatsnew/3.5.rst:105
 msgid ""
@@ -138,50 +172,66 @@ msgid ""
 "which is similar to how Python modules are loaded. (See :ref:`PEP 489 "
 "overview <whatsnew-pep-489>`.)"
 msgstr ""
+"Ahora los módulos integrados y de extensión son inicializados en un proceso "
+"de múltiples fases, que es similar a cómo los módulos de Python son "
+"cargados. (Consultar :ref:`PEP 489 descripción general <whatsnew-pep-489>`.)"
 
 #: ../Doc/whatsnew/3.5.rst:110
 msgid "Significant improvements in the standard library:"
-msgstr ""
+msgstr "Mejoras significativas en la biblioteca estándar:"
 
 #: ../Doc/whatsnew/3.5.rst:112
 msgid ""
 ":class:`collections.OrderedDict` is now :ref:`implemented in C <whatsnew-"
 "ordereddict>`, which makes it 4 to 100 times faster."
 msgstr ""
+":class:`collections.OrderedDict` ahora está :ref:`implementado en C "
+"<whatsnew-ordereddict>`, que lo hace de 4 a 100 veces más rápido."
 
 #: ../Doc/whatsnew/3.5.rst:116
 msgid ""
 "The :mod:`ssl` module gained :ref:`support for Memory BIO <whatsnew-"
 "sslmemorybio>`, which decouples SSL protocol handling from network IO."
 msgstr ""
+"El módulo :mod:`ssl` adquirió :ref:`soporte para la memoria BIO <whatsnew-"
+"sslmemorybio>`, que desacopla el manejo del protocolo SSL de la red de E/S."
 
 #: ../Doc/whatsnew/3.5.rst:120
 msgid ""
 "The new :func:`os.scandir` function provides a :ref:`better and "
 "significantly faster way <whatsnew-pep-471>` of directory traversal."
 msgstr ""
+"La nueva función :func:`os.scandir` proporciona una :ref:`forma mejor y "
+"significativamente más rápida <whatsnew-pep-471>` de recorrido de directorio."
 
 #: ../Doc/whatsnew/3.5.rst:124
 msgid ""
 ":func:`functools.lru_cache` has been mostly :ref:`reimplemented in C "
 "<whatsnew-lrucache>`, yielding much better performance."
 msgstr ""
+":func:`functools.lru_cache` ha sido principalmente :ref:`reimplementado en C "
+"<whatsnew-lrucache>`, produciendo un rendimiento mucho mejor."
 
 #: ../Doc/whatsnew/3.5.rst:128
 msgid ""
 "The new :func:`subprocess.run` function provides a :ref:`streamlined way to "
 "run subprocesses <whatsnew-subprocess>`."
 msgstr ""
+"La nueva función :func:`subprocess.run` proporciona una :ref:`forma "
+"simplificada de ejecutar subprocesos <whatsnew-subprocess>`."
 
 #: ../Doc/whatsnew/3.5.rst:131
 msgid ""
 "The :mod:`traceback` module has been significantly :ref:`enhanced <whatsnew-"
 "traceback>` for improved performance and developer convenience."
 msgstr ""
+"El módulo :mod:`traceback` se ha :ref:`mejorado <whatsnew-traceback>` "
+"significativamente para mejorar el rendimiento y la conveniencia del "
+"desarrollador."
 
 #: ../Doc/whatsnew/3.5.rst:136
 msgid "Security improvements:"
-msgstr ""
+msgstr "Mejoras de seguridad:"
 
 #: ../Doc/whatsnew/3.5.rst:138
 msgid ""
@@ -189,28 +239,39 @@ msgid ""
 "enabled by instantiating a :class:`ssl.SSLContext` manually.  (See :issue:"
 "`22638` for more details; this change was backported to CPython 3.4 and 2.7.)"
 msgstr ""
+"Ahora SSLv3 está deshabilitado en toda la biblioteca estándar. Aún se puede "
+"habilitar creando una instancia de :class:`ssl.SSLContext` manualmente. "
+"(Consultar :issue:`22638` para más detalles; este cambio fue respaldado a "
+"CPython 3.4 y 2.7.)"
 
 #: ../Doc/whatsnew/3.5.rst:143
 msgid ""
 "HTTP cookie parsing is now stricter, in order to protect against potential "
 "injection attacks. (Contributed by Antoine Pitrou in :issue:`22796`.)"
 msgstr ""
+"Ahora el análisis de cookies HTTP es más estricto, con el fin de proteger "
+"contra posibles ataques de entrada. (Contribución de Antoine Pitrou en :"
+"issue:`22796`.)"
 
 #: ../Doc/whatsnew/3.5.rst:148
 msgid "Windows improvements:"
-msgstr ""
+msgstr "Mejoras de Windows:"
 
 #: ../Doc/whatsnew/3.5.rst:150
 msgid ""
 "A new installer for Windows has replaced the old MSI. See :ref:`using-on-"
 "windows` for more information."
 msgstr ""
+"Un nuevo instalador para Windows ha reemplazado al antiguo MSI. Consultar :"
+"ref:`using-on-windows` para más información."
 
 #: ../Doc/whatsnew/3.5.rst:153
 msgid ""
 "Windows builds now use Microsoft Visual C++ 14.0, and extension modules "
 "should use the same."
 msgstr ""
+"Ahora las compilaciones de Windows usan Microsoft Visual C++ 14.0, y los "
+"módulos de extensión deberían utilizar lo mismo."
 
 #: ../Doc/whatsnew/3.5.rst:157
 msgid ""
@@ -218,6 +279,9 @@ msgid ""
 "many other smaller improvements, CPython optimizations, deprecations, and "
 "potential porting issues."
 msgstr ""
+"Por favor siga leyendo para obtener una lista completa de los cambios que se "
+"enfrentan los usuarios, incluidas muchas otras mejoras menores, "
+"optimizaciones de CPython, deprecations y posibles problemas de portabilidad."
 
 #: ../Doc/whatsnew/3.5.rst:163
 msgid "New Features"
