Apply suggestions from code review
Co-authored-by: fjsevilla <fjsevilla2.0@gmail.com>

--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -589,7 +589,7 @@ msgid ""
 "data:`SEEK_SET`, :data:`SEEK_CUR`, and :data:`SEEK_END`."
 msgstr ""
 "El módulo :mod:`io` tiene tres nuevas constantes para el método :meth:"
-"`seek` :data:`SEEK_SET`, :data:`SEEK_CUR`, y :data:`SEEK_END`."
+"`seek`: :data:`SEEK_SET`, :data:`SEEK_CUR` y :data:`SEEK_END`."
 
 #: ../Doc/whatsnew/3.1.rst:372
 msgid "The :attr:`sys.version_info` tuple is now a named tuple::"
@@ -621,7 +621,7 @@ msgid ""
 "*fix_imports* option::"
 msgstr ""
 "El módulo :mod:`pickle` ha sido adaptado para una mejor interoperabilidad "
-"con 2.x cuando usado con un protocolo 2 o menor.  La reorganización de la "
+"con 2.x cuando es usado con un protocolo 2 o menor.  La reorganización de la "
 "biblioteca estándar cambió la referencia formal para varios objetos.  Por "
 "ejemplo, ``__builtin__.set`` en Python 2 es llamado ``builtins.set`` en "
 "Python 3. Este cambio confundió los esfuerzos de compartir datos entre "
@@ -703,8 +703,8 @@ msgid ""
 "of collections and therefore the garbage collection overhead on long-running "
 "programs, depending on their particular use of datatypes."
 msgstr ""
-"Se ha añadido una heurística para que el recolector de elementos no "
-"utilizados no realice el seguimiento de tuplas y dicts que contengan solo "
+"Se ha añadido una heurística para que el recolector de basura "
+"no realice el seguimiento de tuplas y diccionarios que contengan solo "
 "objetos no rastreables. Esto puede reducir el tamaño de las colecciones y, "
 "por lo tanto, la sobrecarga de recolección de elementos no utilizados en "
 "programas de larga ejecución, en función de su uso particular de los tipos "
@@ -723,9 +723,9 @@ msgid ""
 msgstr ""
 "Habilitando una opción de configuración llamada ``--with-computed-gotos`` en "
 "compiladores que la admiten (en particular: gcc, SunPro, icc), el ciclo de "
-"evaluación de código de bytes se compila con un nuevo mecanismo de envío que "
-"proporciona aceleraciones de hasta un 20% , dependiendo del sistema, el "
-"compilador y el punto de referencia."
+"evaluación del bytecode se compila con un nuevo mecanismo de despacho que "
+"proporciona aceleraciones de hasta un 20% , dependiendo del sistema, del "
+"compilador y del punto de referencia."
 
 #: ../Doc/whatsnew/3.1.rst:442
 msgid ""
@@ -756,10 +756,10 @@ msgid ""
 "closely match the `JSON specification <http://json.org/>`_ which is defined "
 "in terms of Unicode."
 msgstr ""
-"El módulo :mod:`json` tiene ahora una extención C para mejorar "
-"sustancialmente su desempeño.  Además, la API fue modificada para json "
+"El módulo :mod:`json` tiene ahora una extensión C para mejorar "
+"sustancialmente su desempeño.  Además, la API fue modificada para que json "
 "trabaje solo con class:`str`, no con :class:`bytes`.  Este cambio hace que "
-"el módulo coincida con la `JSON specification <http://json.org/>`_ que es "
+"el módulo coincida con la `especificación de JSON <https://www.json.org/json-es.html>`_ que es "
 "definida en términos de Unicode."
 
 #: ../Doc/whatsnew/3.1.rst:456
@@ -777,7 +777,7 @@ msgid ""
 msgstr ""
 "La deserialización (*unpickling*) ahora interna los nombres de los atributos "
 "de los objetos serializados (*pickled*). Esto ahorra memoria y permite que "
-"los *pickles* sean más pequeños."
+"los pickles sean más pequeños."
 
 #: ../Doc/whatsnew/3.1.rst:462
 msgid "(Contributed by Jake McGuire and Antoine Pitrou; :issue:`5084`.)"
@@ -792,8 +792,8 @@ msgid ""
 "IDLE's format menu now provides an option to strip trailing whitespace from "
 "a source file."
 msgstr ""
-"El menú de formato de IDLE ahora proporciona una opción para eliminar los "
-"espacios en blanco finales de un archivo de origen."
+"El menú de formato del IDLE ahora proporciona una opción para eliminar los "
+"espacios en blanco finales de un archivo de código fuente."
 
 #: ../Doc/whatsnew/3.1.rst:470
 msgid "(Contributed by Roger D. Serwy; :issue:`5150`.)"
@@ -801,7 +801,7 @@ msgstr "(Contribución de Roger D. Serwy; :issue:`5150`.)"
 
 #: ../Doc/whatsnew/3.1.rst:473
 msgid "Build and C API Changes"
-msgstr "Cambios en la API de Compilación y C"
+msgstr "Cambios en la compilación y la API de C"
 
 #: ../Doc/whatsnew/3.1.rst:475
 msgid "Changes to Python's build process and to the C API include:"
@@ -852,7 +852,7 @@ msgid ""
 "*pylong* by raising :exc:`OverflowError` instead of :exc:`TypeError`."
 msgstr ""
 "La función :c:func:`PyLong_AsUnsignedLongLong()` es ahora capaz de manejar "
-"un *pylong* negativo levantando :exc:`OverflowError` en lugar de :exc:"
+"un *pylong* negativo lanzando una excepción :exc:`OverflowError` en lugar de :exc:"
 "`TypeError`."
 
 #: ../Doc/whatsnew/3.1.rst:501
@@ -863,7 +863,7 @@ msgstr "(Contribución de Mark Dickinson y Lisandro Dalcrin; :issue:`5175`.)"
 msgid ""
 "Deprecated :c:func:`PyNumber_Int`.  Use :c:func:`PyNumber_Long` instead."
 msgstr ""
-"Es ahora obsoleto :c:func:`PyNumber_Int`.  Utilice :c:func:`PyNumber_Long` "
+":c:func:`PyNumber_Int` está ahora obsoleto.  Utilice :c:func:`PyNumber_Long` "
 "en su lugar."
 
 #: ../Doc/whatsnew/3.1.rst:505
