Apply suggestions from code review
Co-authored-by: fjsevilla <fjsevilla2.0@gmail.com>

--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -758,7 +758,7 @@ msgid ""
 msgstr ""
 "El módulo :mod:`json` tiene ahora una extensión C para mejorar "
 "sustancialmente su desempeño.  Además, la API fue modificada para que json "
-"trabaje solo con class:`str`, no con :class:`bytes`.  Este cambio hace que "
+"trabaje solo con :class:`str`, no con :class:`bytes`.  Este cambio hace que "
 "el módulo coincida con la `especificación de JSON <https://www.json.org/json-es.html>`_ que es "
 "definida en términos de Unicode."
 
@@ -929,7 +929,7 @@ msgid ""
 "use protocol 3.  Another solution is to set the *fix_imports* option to "
 "``False``. See the discussion above for more details."
 msgstr ""
-"La reasignación automática de nombres en el módulo de pickle para el "
+"La reasignación automática de nombres en el módulo pickle para el "
 "protocolo 2 o inferior puede hacer que los pickles de Python 3.1 sean "
 "ilegibles en Python 3.0.  Una solución es usar el protocolo 3.  Otra "
 "solución es establecer la opción *fix_imports* en ``False``. Consulte la "
