--- a/howto/regex.po
+++ b/howto/regex.po
@@ -1303,8 +1303,8 @@ msgstr ""
 "lento, pero también permite que ``\\w+`` coincida con las palabras en "
 "francés como era de esperar. Se desaconseja el uso de esta flag en Python 3 "
 "ya que el mecanismo de configuración regional es muy poco confiable, solo "
-"maneja una “cultura” a la vez y solo funciona con configuraciones regionales "
-"de 8 bits. La coincidencia Unicode ya está habilitada de forma "
+"maneja una \"cultura\" a la vez y solo funciona con configuraciones "
+"regionales de 8 bits. La coincidencia Unicode ya está habilitada de forma "
 "predeterminada en Python 3 para patrones Unicode (str), y puede manejar "
 "diferentes configuraciones regionales/idiomas."
 
@@ -2554,7 +2554,7 @@ msgstr ""
 "de la cadena de caracteres. Sin embargo, aún queda más en la RE y el ``>`` "
 "no puede coincidir al final de la cadena de caracteres, por lo que el motor "
 "de la expresión regular tiene que retroceder carácter por carácter hasta que "
-"encuentre una coincidencia para el “. La coincidencia final se extiende "
+"encuentre una coincidencia para el ``>``. La coincidencia final se extiende "
 "desde el `'<'`` en ``'<html>'`` al ``'>'`` en ``'</title>'``, que no es lo "
 "que queremos."
 
