--- a/using/editors.po
+++ b/using/editors.po
@@ -1,26 +1,27 @@
-# SOME DESCRIPTIVE TITLE.
+# Add spanish translation.
 # Copyright (C) 2001-2020, Python Software Foundation
 # This file is distributed under the same license as the Python en Español
 # package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
+# FIRST AUTHOR <eszg.fury@gmail.com>, 2020.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python en Español 3.7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-29 23:24+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2020-11-02 00:56-0300\n"
 "Last-Translator: Xavi Rambla\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.1\n"
 
 #: ../Doc/using/editors.rst:7
 msgid "Editors and IDEs"
-msgstr ""
+msgstr "Editores e IDEs"
 
 #: ../Doc/using/editors.rst:9
 msgid ""
@@ -28,6 +29,9 @@ msgid ""
 "editors and IDEs provide syntax highlighting, debugging tools, and :pep:`8` "
 "checks."
 msgstr ""
+"Existen numerosos IDEs que admiten el lenguaje de programación Python. "
+"Muchos editores e IDEs proporcionan resaltado de sintaxis, herramientas de "
+"depuración y comprobaciones de :pep:`8`."
 
 #: ../Doc/using/editors.rst:12
 msgid ""
@@ -35,3 +39,6 @@ msgid ""
 "and `Integrated Development Environments <https://wiki.python.org/moin/"
 "IntegratedDevelopmentEnvironments>`_ for a comprehensive list."
 msgstr ""
+"Diríjase a `Python Editors <https://wiki.python.org/moin/PythonEditors>`_ y "
+"a `Integrated Development Environments <https://wiki.python.org/moin/"
+"IntegratedDevelopmentEnvironments>`_ para obtener una lista completa."
