Apply suggestions from code review
Co-authored-by: fjsevilla <fjsevilla2.0@gmail.com>

--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -292,7 +292,7 @@ msgstr ""
 "equivalente exacto en coma flotante binaria.  Puesto que no hay un "
 "equivalente exacto, una expresión como ``float('1.1')`` se evalúa como el "
 "valor representable más cercano, que es ``0x1.199999999999ap+0`` en hexadecimal o "
-"`1.100000000000000088817841970012523233890533447265625`` en decimal. Ese "
+"``1.100000000000000088817841970012523233890533447265625`` en decimal. Ese "
 "valor más cercano fue y todavía es utilizado en los cálculos de coma flotante "
 "posteriores."
 
@@ -911,7 +911,7 @@ msgid ""
 "This section lists previously described changes and other bugfixes that may "
 "require changes to your code:"
 msgstr ""
-"Esta sección enumera los cambios descriptos anteriormente y otras "
+"Esta sección enumera los cambios descritos anteriormente y otras "
 "correcciones de errores que pueden requerir cambios en su código:"
 
 #: ../Doc/whatsnew/3.1.rst:526
