--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -85,8 +85,8 @@ msgid ""
 msgstr ""
 "La biblioteca estándar ahora admite el uso de diccionarios ordenados en "
 "varios módulos. El módulo :mod:`configparser` los usa por defecto. Esto "
-"permite que los archivos de configuración se lean, modifiquen y luego "
-"se vuelvan a escribir en su orden original. El método *_asdict()* para :func:"
+"permite que los archivos de configuración se lean, modifiquen y luego se "
+"vuelvan a escribir en su orden original. El método *_asdict()* para :func:"
 "`collections.namedtuple` ahora retorna un diccionario ordenado con los "
 "valores que aparecen en el mismo orden que los índices de tupla subyacentes. "
 "El módulo :mod:`json` se está construyendo con un *object_pairs_hook* para "
@@ -117,10 +117,10 @@ msgid ""
 "program's output, improving its professional appearance and readability::"
 msgstr ""
 "La función incorporada :func:`format` y el método :meth:`str.format` usan un "
-"mini-lenguaje que ahora incluye una forma simple, que no tiene en cuenta la configuración "
-"regional, de formatear un número con un separador de miles. Eso proporciona "
-"una manera de humanizar la salida de un programa, mejorando su apariencia "
-"profesional y legibilidad::"
+"mini-lenguaje que ahora incluye una forma simple, que no tiene en cuenta la "
+"configuración regional, de formatear un número con un separador de miles. "
+"Eso proporciona una manera de humanizar la salida de un programa, mejorando "
+"su apariencia profesional y legibilidad::"
 
 #: ../Doc/whatsnew/3.1.rst:100
 msgid ""
@@ -189,15 +189,15 @@ msgid ""
 "(Contributed by Fredrik Johansson, Victor Stinner, Raymond Hettinger, and "
 "Mark Dickinson; :issue:`3439`.)"
 msgstr ""
-"(Contribución de Fredrik Johansson, Victor Stinner, Raymond Hettinger y "
-"Mark Dickinson; :issue:`3439`.)"
+"(Contribución de Fredrik Johansson, Victor Stinner, Raymond Hettinger y Mark "
+"Dickinson; :issue:`3439`.)"
 
 #: ../Doc/whatsnew/3.1.rst:143
 msgid ""
 "The fields in :func:`format` strings can now be automatically numbered::"
 msgstr ""
-"Los campos en las cadenas de formato de :func:`format` ahora pueden ser automáticamente "
-"numerados::"
+"Los campos en las cadenas de formato de :func:`format` ahora pueden ser "
+"automáticamente numerados::"
 
 #: ../Doc/whatsnew/3.1.rst:149
 msgid ""
@@ -236,8 +236,8 @@ msgid ""
 "The syntax of the :keyword:`with` statement now allows multiple context "
 "managers in a single statement::"
 msgstr ""
-"La sintaxis de la sentencia :keyword:`with` ahora permite múltiples "
-"gestores de contexto en una sola declaración::"
+"La sintaxis de la sentencia :keyword:`with` ahora permite múltiples gestores "
+"de contexto en una sola declaración::"
 
 #: ../Doc/whatsnew/3.1.rst:171
 msgid ""
@@ -291,10 +291,10 @@ msgstr ""
 "La importancia se ve fácilmente con un número como ``1.1``, que no tiene un "
 "equivalente exacto en coma flotante binaria.  Puesto que no hay un "
 "equivalente exacto, una expresión como ``float('1.1')`` se evalúa como el "
-"valor representable más cercano, que es ``0x1.199999999999ap+0`` en hexadecimal o "
-"``1.100000000000000088817841970012523233890533447265625`` en decimal. Ese "
-"valor más cercano fue y todavía es utilizado en los cálculos de coma flotante "
-"posteriores."
+"valor representable más cercano, que es ``0x1.199999999999ap+0`` en "
+"hexadecimal o ``1.100000000000000088817841970012523233890533447265625`` en "
+"decimal. Ese valor más cercano fue y todavía es utilizado en los cálculos de "
+"coma flotante posteriores."
 
 #: ../Doc/whatsnew/3.1.rst:198
 msgid ""
@@ -323,10 +323,10 @@ msgid ""
 "get stored with the same underlying float value) and returns the shortest "
 "representation."
 msgstr ""
-"El nuevo algoritmo para ``repr(1.1)`` es más inteligente y "
-"retorna ``'1.1'``. Efectivamente, busca todas las representaciones de "
-"cadenas equivalentes (las que se almacenan con el mismo valor flotante "
-"subyacente) y retorna la representación más corta."
+"El nuevo algoritmo para ``repr(1.1)`` es más inteligente y retorna "
+"``'1.1'``. Efectivamente, busca todas las representaciones de cadenas "
+"equivalentes (las que se almacenan con el mismo valor flotante subyacente) y "
+"retorna la representación más corta."
 
 #: ../Doc/whatsnew/3.1.rst:212
 msgid ""
@@ -335,8 +335,8 @@ msgid ""
 "``1.1 + 2.2 != 3.3`` even though the representations may suggest otherwise."
 msgstr ""
 "El nuevo algoritmo tiende a emitir representaciones más limpias cuando es "
-"posible, pero esto no cambia los valores subyacentes.  Por lo tanto, "
-"todavía se da el caso ``1.1 + 2.2 != 3.3``, aún cuando las representaciones puedan "
+"posible, pero esto no cambia los valores subyacentes.  Por lo tanto, todavía "
+"se da el caso ``1.1 + 2.2 != 3.3``, aún cuando las representaciones puedan "
 "sugerir lo contrario."
 
 #: ../Doc/whatsnew/3.1.rst:216
@@ -365,8 +365,8 @@ msgid ""
 "Added a :class:`collections.Counter` class to support convenient counting of "
 "unique items in a sequence or iterable::"
 msgstr ""
-"Se ha añadido una clase :class:`collections.Counter` para admitir el recuento "
-"conveniente de elementos únicos en una secuencia o una iteración::"
+"Se ha añadido una clase :class:`collections.Counter` para admitir el "
+"recuento conveniente de elementos únicos en una secuencia o una iteración::"
 
 #: ../Doc/whatsnew/3.1.rst:232
 msgid "(Contributed by Raymond Hettinger; :issue:`1696199`.)"
@@ -435,8 +435,8 @@ msgid ""
 msgstr ""
 "El módulo :mod:`itertools` desarrolló dos nuevas funciones.  La función :"
 "func:`itertools.combinations_with_replacement` es una de las cuatro para "
-"generar combinatorias que incluyen permutaciones y productos cartesianos.  La "
-"función :func:`itertools.compress` imita su homónimo de APL.  Además, la "
+"generar combinatorias que incluyen permutaciones y productos cartesianos.  "
+"La función :func:`itertools.compress` imita su homónimo de APL.  Además, la "
 "función existente :func:`itertools.count` tiene ahora un argumento *step* "
 "opcional y puede aceptar cualquier tipo de secuencia de conteo, incluyendo :"
 "class:`fractions.Fraction` y :class:`decimal.Decimal`::"
@@ -562,8 +562,8 @@ msgid ""
 "Also, tests for exceptions have been builtout to work with context managers "
 "using the :keyword:`with` statement::"
 msgstr ""
-"Además, se han creado pruebas de excepciones para trabajar con "
-"gestores de contexto usando la declaración :keyword:`with`::"
+"Además, se han creado pruebas de excepciones para trabajar con gestores de "
+"contexto usando la declaración :keyword:`with`::"
 
 #: ../Doc/whatsnew/3.1.rst:360
 msgid ""
@@ -703,12 +703,11 @@ msgid ""
 "of collections and therefore the garbage collection overhead on long-running "
 "programs, depending on their particular use of datatypes."
 msgstr ""
-"Se ha añadido una heurística para que el recolector de basura "
-"no realice el seguimiento de tuplas y diccionarios que contengan solo "
-"objetos no rastreables. Esto puede reducir el tamaño de las colecciones y, "
-"por lo tanto, la sobrecarga de recolección de elementos no utilizados en "
-"programas de larga ejecución, en función de su uso particular de los tipos "
-"de datos."
+"Se ha añadido una heurística para que el recolector de basura no realice el "
+"seguimiento de tuplas y diccionarios que contengan solo objetos no "
+"rastreables. Esto puede reducir el tamaño de las colecciones y, por lo "
+"tanto, la sobrecarga de recolección de elementos no utilizados en programas "
+"de larga ejecución, en función de su uso particular de los tipos de datos."
 
 #: ../Doc/whatsnew/3.1.rst:434
 msgid "(Contributed by Antoine Pitrou, :issue:`4688`.)"
@@ -759,8 +758,8 @@ msgstr ""
 "El módulo :mod:`json` tiene ahora una extensión C para mejorar "
 "sustancialmente su desempeño.  Además, la API fue modificada para que json "
 "trabaje solo con :class:`str`, no con :class:`bytes`.  Este cambio hace que "
-"el módulo coincida con la `especificación de JSON <https://www.json.org/json-es.html>`_ que es "
-"definida en términos de Unicode."
+"el módulo coincida con la `especificación de JSON <https://www.json.org/json-"
+"es.html>`_ que es definida en términos de Unicode."
 
 #: ../Doc/whatsnew/3.1.rst:456
 msgid ""
@@ -852,8 +851,8 @@ msgid ""
 "*pylong* by raising :exc:`OverflowError` instead of :exc:`TypeError`."
 msgstr ""
 "La función :c:func:`PyLong_AsUnsignedLongLong()` es ahora capaz de manejar "
-"un *pylong* negativo lanzando una excepción :exc:`OverflowError` en lugar de :exc:"
-"`TypeError`."
+"un *pylong* negativo lanzando una excepción :exc:`OverflowError` en lugar "
+"de :exc:`TypeError`."
 
 #: ../Doc/whatsnew/3.1.rst:501
 msgid "(Contributed by Mark Dickinson and Lisandro Dalcrin; :issue:`5175`.)"
@@ -929,8 +928,8 @@ msgid ""
 "use protocol 3.  Another solution is to set the *fix_imports* option to "
 "``False``. See the discussion above for more details."
 msgstr ""
-"La reasignación automática de nombres en el módulo pickle para el "
-"protocolo 2 o inferior puede hacer que los pickles de Python 3.1 sean "
-"ilegibles en Python 3.0.  Una solución es usar el protocolo 3.  Otra "
-"solución es establecer la opción *fix_imports* en ``False``. Consulte la "
-"discusión anterior para obtener más detalles."
+"La reasignación automática de nombres en el módulo pickle para el protocolo "
+"2 o inferior puede hacer que los pickles de Python 3.1 sean ilegibles en "
+"Python 3.0.  Una solución es usar el protocolo 3.  Otra solución es "
+"establecer la opción *fix_imports* en ``False``. Consulte la discusión "
+"anterior para obtener más detalles."
