--- a/distutils/index.po
+++ b/distutils/index.po
@@ -6,47 +6,49 @@
 # Check https://github.com/python/python-docs-es/blob/3.8/TRANSLATORS to
 # get the list of volunteers
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2020-11-21 17:08-0500\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: \n"
+"Language: es\n"
+"X-Generator: Poedit 2.4.1\n"
 
 #: ../Doc/distutils/index.rst:5
 msgid "Distributing Python Modules (Legacy version)"
-msgstr ""
+msgstr "Distribución de módulos de Python (versión heredada)"
 
 #: ../Doc/distutils/index.rst
 msgid "Authors"
-msgstr ""
+msgstr "Autores"
 
 #: ../Doc/distutils/index.rst:7
 msgid "Greg Ward, Anthony Baxter"
-msgstr ""
+msgstr "Greg Ward, Anthony Baxter"
 
 #: ../Doc/distutils/index.rst
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
 #: ../Doc/distutils/index.rst:8
 msgid "distutils-sig@python.org"
-msgstr ""
+msgstr "distutils-sig@python.org"
 
 #: ../Doc/distutils/index.rst:12
 msgid ":ref:`distributing-index`"
-msgstr ""
+msgstr ":ref:`distributing-index`"
 
 #: ../Doc/distutils/index.rst:13
 msgid "The up to date module distribution documentations"
-msgstr ""
+msgstr "La documentación de distribución de módulos actualizada"
 
 #: ../Doc/distutils/_setuptools_disclaimer.rst:3
 msgid ""
@@ -54,6 +56,10 @@ msgid ""
 "documentation at https://setuptools.readthedocs.io/en/latest/setuptools.html "
 "independently covers all of the relevant information currently included here."
 msgstr ""
+"Este documento se conserva únicamente hasta que la documentación de "
+"``setuptools`` en https://setuptools.readthedocs.io/en/latest/setuptools."
+"html cubra de forma independiente toda la información relevante que se "
+"incluye actualmente aquí."
 
 #: ../Doc/distutils/index.rst:19
 msgid ""
@@ -63,6 +69,12 @@ msgid ""
 "recommendations section <https://packaging.python.org/guides/tool-"
 "recommendations/>`__ in the Python Packaging User Guide for more information."
 msgstr ""
+"Esta guía solo cubre las herramientas básicas para compilar y distribuir "
+"extensiones que se proporcionan como parte de esta versión de Python. Las "
+"herramientas de terceros ofrecen alternativas más seguras y más fáciles de "
+"usar. Consulte la `sección de recomendaciones rápidas <https://packaging."
+"python.org/guides/tool-recommendations/>`__ en la Guía del usuario de Python "
+"Packaging para obtener más información."
 
 #: ../Doc/distutils/index.rst:25
 msgid ""
@@ -71,3 +83,8 @@ msgid ""
 "capabilities that ``setuptools`` builds on to allow Python developers to "
 "make Python modules and extensions readily available to a wider audience."
 msgstr ""
+"Este documento describe las utilidades de distribución de Python (\"Distutils"
+"\") desde el punto de vista del desarrollador del módulo, describiendo las "
+"capacidades subyacentes sobre las que se basan las ``setuptools`` para "
+"permitir que los desarrolladores de Python hagan que los módulos y "
+"extensiones de Python estén disponibles para una audiencia más amplia."
