Agregar palabaras faltantes distutils/apiref

--- a/distutils/apiref.po
+++ b/distutils/apiref.po
@@ -257,7 +257,7 @@ msgid ""
 "a list of strings; valid classifiers are listed on `PyPI <https://pypi.org/"
 "classifiers>`_."
 msgstr ""
-"una lista de strings; los clasificadores válidos estan listados en `PyPI "
+"una lista de strings; los clasificadores válidos están listados en `PyPI "
 "<https://pypi.org/classifiers>`_."
 
 #: ../Doc/distutils/apiref.rst:93
@@ -405,7 +405,7 @@ msgid ""
 "Stop after the :class:`Distribution` instance has been created  and "
 "populated with the keyword arguments to :func:`setup`"
 msgstr ""
-"Detiene despúes de que la instancia de la clase :class:`Distribution` haya "
+"Detiene después de que la instancia de la clase :class:`Distribution` haya "
 "sido creada y llenada con los argumentos de la palabra clave para la "
 "función :func:`setup`"
 
@@ -418,7 +418,7 @@ msgid ""
 "Stop after config files have been parsed (and their data stored in the :"
 "class:`Distribution` instance)"
 msgstr ""
-"Detiene despúes que los archivos de configuración hayan sido analizados (y "
+"Detiene después que los archivos de configuración hayan sido analizados (y "
 "sus datos almacenados en la instancia de la clase :class:`Distribution`)"
 
 #: ../Doc/distutils/apiref.rst:153
@@ -430,7 +430,7 @@ msgid ""
 "Stop after the command-line (``sys.argv[1:]`` or  *script_args*) have been "
 "parsed (and the data stored in the :class:`Distribution` instance.)"
 msgstr ""
-"Detiene despúes de que la línea de comandos (``sys.argv[1:]`` o "
+"Detiene después de que la línea de comandos (``sys.argv[1:]`` o "
 "*script_args*) se haya analizado (y los datos almacenados en la instancia de "
 "la clase :class:`Distribution`.)"
 
@@ -443,7 +443,7 @@ msgid ""
 "Stop after all commands have been run (the same as  if :func:`setup` had "
 "been called in the usual way). This is the default value."
 msgstr ""
-"Detiene despúes de que todos los comandos hayan sido ejecutados (lo mismo "
+"Detiene después de que todos los comandos hayan sido ejecutados (lo mismo "
 "que si la función :func:`setup` haya sido llamada de forma habitual). Este "
 "es el valor predeterminado."
 
@@ -513,7 +513,7 @@ msgstr ""
 "distribución (donde reside el script de configuración), en forma Unix "
 "(separados por barras) para su portabilidad. Los archivos fuente pueden ser "
 "C, C ++, SWIG (.i), archivos de recursos específicos de la plataforma o "
-"cualquier otra cosa que el commando :command:`build_ext` reconozca como "
+"cualquier otra cosa que el comando :command:`build_ext` reconozca como "
 "fuente para una extensión de Python."
 
 #: ../Doc/distutils/apiref.rst:207
@@ -665,8 +665,8 @@ msgid ""
 "extension language (i.e. ``'c'``, ``'c++'``, ``'objc'``). Will be detected "
 "from the source extensions if not provided."
 msgstr ""
-"idioma de extension (es decir, ``'c'``, ``'c++'``, ``'objc'``). Se detectará "
-"en las extensiones de origen si no se proporcionan."
+"lenguaje de extensión (es decir, ``'c'``, ``'c++'``, ``'objc'``). Se "
+"detectará en las extensiones de origen si no se proporcionan."
 
 #: ../Doc/distutils/apiref.rst:284
 msgid "*optional*"
@@ -931,7 +931,7 @@ msgid ""
 "compiler class (depending on the platform)."
 msgstr ""
 "Agrega *libname* a la lista de bibliotecas que se incluirán en todos los "
-"enlaces manejados ​​por este compiladorde objeto. Ten en cuenta que *libname* "
+"enlaces manejados por este compilador de objeto. Ten en cuenta que *libname* "
 "debería no ser el nombre de un archivo que contenga una biblioteca, sino el "
 "nombre de la biblioteca en sí: el enlazador, el compilador o la clase del "
 "compilador deducirán el nombre del archivo actual (según el plataforma)."
@@ -1023,7 +1023,7 @@ msgid ""
 msgstr ""
 "Anula la definición de una macro de preprocesador para todas las "
 "compilaciones impulsadas por este compilador de objeto. Si la misma macro "
-"está definida por :meth:`define_macro` y la indefinidad por :meth:"
+"está definida por :meth:`define_macro` y la indefinida por :meth:"
 "`undefine_macro`, la última llamada tiene prioridad (incluidas varias "
 "redefiniciones o indefiniciones). Si la macro está redefinida/indefinida por "
 "compilación (es decir, en la llamada a :meth: `compile`), entonces eso tiene "
@@ -1652,7 +1652,7 @@ msgstr ""
 "clase abstracta :class:`CCompiler` para Microsoft Visual Studio. Por lo "
 "general, los módulos de extensión deben compilarse con el mismo compilador "
 "Python que se utilizó para compilar. Para Python 2.3 y versiones anteriores, "
-"el compilador fué Visual Studio 6. Para Python 2.4 y 2.5, el compilador es "
+"el compilador fue Visual Studio 6. Para Python 2.4 y 2.5, el compilador es "
 "Visual Studio .NET 2003."
 
 #: ../Doc/distutils/apiref.rst:845
@@ -1844,7 +1844,7 @@ msgstr ""
 "silenciosamente cualquier archivo fuente faltante; si es ``'newer'``, "
 "cualquier archivo fuente que falte nos hace suponer que *target* está "
 "desactualizado (esto es útil en el modo de \"*dry-run*\" (o ejecución en "
-"seco): que hará que pretenda ejecutar commandos que no funcionaría porque "
+"seco): que hará que pretenda ejecutar comandos que no funcionaría porque "
 "faltan entradas, pero no importa porque en realidad no va a ejecutar los "
 "comandos)."
 
@@ -2000,7 +2000,7 @@ msgid ""
 "to copy file contents."
 msgstr ""
 "*link* te permite crear enlaces físicos (usando :func:`os.link`) o enlaces "
-"simbólicos (usando :func:`os.symlink`) en lugar de copiar: configuralo en "
+"simbólicos (usando :func:`os.symlink`) en lugar de copiar: configúralo en "
 "``'hard'`` o ``'sym'``; si es ``None`` (el predeterminado), los archivos se "
 "copian. No establezcas *link* en sistemas que no lo admitan: :func:"
 "`copy_file` pues no comprueba si hay enlaces físicos o simbólicos "
@@ -2181,7 +2181,7 @@ msgid ""
 "users can use in config files, command-line options, etc.  Currently this "
 "includes:"
 msgstr ""
-"Asegurate de que '*os.environ*' tenga todas las variables de entorno "
+"Asegúrate de que '*os.environ*' tenga todas las variables de entorno "
 "garantizamos que los usuarios pueden usar en archivos de configuración, "
 "opciones de línea de comandos, etc. Actualmente, esto incluye:"
 
@@ -2501,8 +2501,8 @@ msgid ""
 "The option_table is a list of 3-tuples: ``(long_option, short_option, "
 "help_string)``"
 msgstr ""
-"*option_table* es una lista de 3 tuplas: ``(*long_option*, *short_option*, "
-"*help_string*)`"
+"option_table es una lista de 3 tuplas: ``(long_option, short_option, "
+"help_string)``"
 
 #: ../Doc/distutils/apiref.rst:1363
 msgid ""
@@ -2848,7 +2848,7 @@ msgid ""
 "`readline`"
 msgstr ""
 "Todas las opciones son booleanas y afectan los valores retornados por :meth:"
-"`readline"
+"`readline`"
 
 #: ../Doc/distutils/apiref.rst:1583
 msgid "option name"
@@ -2931,7 +2931,7 @@ msgid ""
 msgstr ""
 "si una barra invertida es el último carácter que no es una nueva línea en "
 "una línea después de eliminar los comentarios y los espacios en blanco, "
-"unela a la siguiente línea para formar una línea lógica; si N líneas "
+"únela a la siguiente línea para formar una línea lógica; si N líneas "
 "consecutivas terminan con una barra invertida, entonces N + 1 líneas físicas "
 "se unirán para formar una línea lógica."
 
@@ -3010,7 +3010,7 @@ msgstr ""
 "`unreadline`). Si la opción *join_lines* es verdadera, esto puede implicar "
 "la lectura de varias líneas físicas concatenadas en una sola cadena. "
 "Actualiza el número de línea actual, por lo que llamar a :meth:`warn` "
-"despues :meth:`readline` emite una advertencia sobre las líneas físicas que "
+"después :meth:`readline` emite una advertencia sobre las líneas físicas que "
 "acaba de leer. Retorna ``None`` al final del archivo, ya que un string vacío "
 "puede aparecer si *rstrip_ws* es verdadero pero *strip_blanks* no lo es."
 
@@ -3236,8 +3236,8 @@ msgid ""
 ":mod:`distutils.command.bdist_msi` --- Build a Microsoft Installer binary "
 "package"
 msgstr ""
-":mod:`distutils.command.bdist_msi` --- Construye un paquete binario de "
-"Microsoft Installer"
+":mod:`distutils.command.bdist_msi` --- Construye un paquete binario "
+"instalador de Microsoft"
 
 #: ../Doc/distutils/apiref.rst:1840
 msgid "Builds a `Windows Installer`_ (.msi) binary package."
